# reignite

./: .gitignore  README.md  codegen.py  fetchsdf.py  publish.sh  pyproject.toml  run_tests.sh  scrapesdf.py
src/: main.py
src/reignite/: __init__.py  reader.py
src/reignite/_sdf/: actor.py  air_pressure.py  air_speed.py  altimeter.py  atmosphere.py  audio_sink.py  audio_source.py  battery.py  box.py  camera.py  capsule.py  collision.py  collision_engine.py  cone.py  contact.py  cylinder.py  ellipsoid.py  force_torque.py  frame.py  gazebo.py  geometry.py  gps.py  gripper.py  gui.py  heightmap.py  image.py  imu.py  inertial.py  joint.py  joint_state.py  lidar.py  light.py  light_state.py  link.py  link_state.py  logical_camera.py  magnetometer.py  material.py  mesh.py  mimic.py  (+28 more)
src/reignite/elements/: __init__.py  actor.py  air_pressure.py  air_speed.py  altimeter.py  atmosphere.py  audio_sink.py  audio_source.py  battery.py  box.py  box_shape.py  camera.py  capsule.py  capsule_shape.py  collision.py  collision_engine.py  cone.py  cone_shape.py  contact.py  cylinder.py  cylinder_shape.py  ellipsoid.py  ellipsoid_shape.py  force_torque.py  forcetorque.py  frame.py  gazebo.py  geometry.py  gps.py  gripper.py  gui.py  heightmap.py  heightmap_shape.py  image.py  image_shape.py  imu.py  inertial.py  joint.py  joint_state.py  lidar.py  (+43 more)
src/reignite/sdf/: __init__.py  actor.py  air_pressure.py  air_speed.py  altimeter.py  atmosphere.py  audio_sink.py  audio_source.py  battery.py  box.py  camera.py  (+58 more)
tests/: test_reader.py
tests/fixtures/: model.sdf  simple_world.sdf
(+3967 files in other folders)
