[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reignite"
version = "0.10.0"
description = "Modern Procedural Generation for Gazebo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OguzhanUmutlu", email = "contact@oguzhanumutlu.com" }
]

[project.optional-dependencies]
test = ["pytest>=7"]
publish = ["build", "twine"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
